--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,7 @@
 </div>
 
 <script>
-    // TEMP backend domain
+    // Backend API configuration
     window.API_BASE = "https://trees-race-app-aqd6bva2etcfaaeb.canadacentral-01.azurewebsites.net";
   
     function API(path) {
@@ -882,7 +882,7 @@ const app = createApp({
   }
 }).mount('#app');
 
-// Optional: expose for quick console debugging
+// Expose app instance for debugging
 window.app = app;
 </script>
 </body>
